Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.0, 5.15.6, 6.2.0
-
Fix Version/s: 5.15.8, 6.2.3, 6.3.0 Alpha
-
Component/s: Virtual Keyboard
-
Labels:
-
Commits:5564f1c96322d7c3f884d2e6f9b3a95e3134fb9f (qt/qtvirtualkeyboard/dev) 6b0206ead18466a2eab48d24c7f08d0db1fdd061 (qt/qtvirtualkeyboard/6.2) f5705aab45a55acf092f012a7339144e98deace4 (qt/tqtc-qtvirtualkeyboard/5.15)
Description
InputPanel seems to have broken its anchors somehow. This used to work:
Anything { anchors.bottom: inputPanel.top } InputPanel { id: inputPanel y: active ? parent.height - height : parent.height }
Now top anchor only seems to be evaluated once and does not react to changes to y coordinate. It does not seem to happen with any other item that I tried besides InputPanel so it does not seem to be a general QtQuick issue.
Attachments
Issue Links
- relates to
-
QTBUG-92881 InputPanels defaults z value should be lower than max value for overlays
-
- Closed
-
- resulted from
-
QTBUG-56918 When the keyboard is shown for a text field in a modal popup then it will not be usable
-
- Closed
-